[package]
name = "apoptosis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.75"
tokio = { version = "^1.34.0", features = ["full"] }
tracing = "^0.1.40"
tracing-subscriber = "^0.3.18"
sigh = "^1.0.1"
axum = "^0.7.2"
clap = { version = "^4.4.11", features = ["derive"] }