[package]
name = "apoptosis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.79"
tokio = { version = "^1.35.1", features = ["full"] }
tracing = "^0.1.40"
tracing-subscriber = "^0.3.18"
sigh = "^1.0.2"
axum = "^0.7.4"
clap = { version = "^4.4.16", features = ["derive"] }
sled = "0.34.7"
diesel = { version = "2.1.4", features = ["postgres"] }
diesel-async = "0.4.1"