[package]
name = "apoptosis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.86"
tokio = { version = "^1.38.0", features = ["full"] }
tracing = "^0.1.40"
tracing-subscriber = "^0.3.18"
sigh = "^1.0.2"
axum = "^0.7.5"
clap = { version = "^4.5.4", features = ["derive"] }
sled = "0.34.7"
diesel = { version = "^2.1.4", features = ["postgres_backend"] }
diesel-async = { version = "^0.4.1", features = ["bb8", "postgres"] }
futures-util = "^0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"]}
serde_json = { version = "1.0" }

# TODO: Remove reqwest and replace it using hyper-based solution to prevent potential DoS
reqwest = { version = "0.12.4", features = ["json"] }
base64 = "0.22.1"
sha2 = "0.10.8"
url = "2.5.0"
http = "1.1.0"
chrono = "0.4.38"
